--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "discordjs-base",
+  "name": "galatic",
   "version": "1.0.0",
-  "description": "Code Base for an Discord.JS Bot",
+  "description": "Galatic - Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "routerabfrage",
-  "license": "https://github.com/routerabfrage/License",
+  "author": "Clemens",
   "dependencies": {
     "discord.js": "^12.3.1",
     "enmap": "^5.7.1",
