--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODE1OTg0NTY0MTExNTQwMjk0.YD0W2A.ZthK1M9LFm6E08Fp5loOWufqEWE",
+    "token": "TOKEN",
     "owner": ["564740301600718859", "613759650130690058"],
     "prefix": "!",
     "version": "1.0"
