--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "author": "Clemens",
   "dependencies": {
+    "better-sqlite3": "^7.0.1",
     "discord.js": "^12.3.1",
     "enmap": "^5.7.1",
-    "better-sqlite3": "^7.0.1"
+    "moment": "^2.29.3"
   }
 }
