--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "better-sqlite3": "^7.0.1",
     "discord.js": "^12.3.1",
     "enmap": "^5.7.1",
-    "moment": "^2.29.3"
+    "moment": "^2.29.3",
+    "quick.db": "^7.1.3"
   }
 }
