--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "author": "Clemens",
   "dependencies": {
+    "ascii-table": "^0.0.9",
     "better-sqlite3": "^7.0.1",
+    "common-tags": "^1.8.2",
     "discord.js": "^12.3.1",
     "enmap": "^5.7.1",
+    "mathjs": "^10.5.1",
     "moment": "^2.29.3",
+    "node-os-utils": "^1.3.6",
     "quick.db": "^7.1.3"
   }
 }
