Changed owner id

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "token": "TOKEN",
-    "owner": ["564740301600718859", "613759650130690058"],
+    "owner": "564740301600718859",
     "prefix": "!",
     "version": "1.0"
 }
